[gd_scene load_steps=3 format=3 uid="uid://c2l6t6ntdycod"]

[ext_resource type="Script" path="res://Scripts/Perfil.gd" id="1_5s5cn"]
[ext_resource type="PackedScene" uid="uid://drfnqsugnf5r1" path="res://Scenes/parallax_background.tscn" id="2_65ke0"]

[node name="Perfil" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5s5cn")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.427451, 0.6, 0.886275)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 68.0
grow_horizontal = 2

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="UserNameEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
editable = false

[node name="Edit" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Edit"

[node name="Save" type="Button" parent="VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "Save"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_bottom = 65.0
grow_horizontal = 0
size_flags_horizontal = 0
text = "Exit"

[node name="ParallaxBackground" parent="." instance=ExtResource("2_65ke0")]
visible = false

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="visibility_changed" from="VBoxContainer/VBoxContainer/Save" to="." method="_on_save_visibility_changed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
